name:                morse
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Text
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

test-suite morse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-language:    Haskell2010
